--- a/src/app/shared/authentication/signin/signin.component.scss
+++ b/src/app/shared/authentication/signin/signin.component.scss
@@ -1,176 +1,132 @@
 @import "../../../../assets/colors";
 
-#custom-overlay {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-
-  .sentences {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-  }
-}
-
-.bg-image {
-  /* The image used */
-  background-image: url("../../../../assets/icons/login/PHOTO-2020-07-29-14-22-43@3x.png");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.shadow {
-  mask-image: url("../../../../assets/icons/login/Mask Group 2@3x.png");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.wrapper {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
+section.login {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  height: 100%;
+  position: relative;
 
-  img {
-    width: 40%;
-    height: 30%;
+  background-image: url("../../../../assets/login-bg.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  img.logo {
+    width: 93px;
+    height: 130px;
+    margin: 50px auto 79px auto;
   }
 
-  .centerPart {
+  div.form {
+    box-sizing: border-box;
+    padding: 0 16px;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    height: 60%;
 
-    .signin-wrapper {
-      width: 100%;
-      text-align: center;
+    form {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
 
-      .regular-wrapper {
+      div.row {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        height: 250px;
         align-items: center;
-        padding: 0 16px;
+        justify-content: space-evenly;
+        width: 100%;
+        margin-bottom: 30px;
 
-        input {
-          padding: 1em;
-          border-radius: 8px;
-          text-align: center;
-          width: 343px;
-          height: 56px;
-          border: white;
+        div.errors {
+          display: flex;
+          align-items: flex-start;
+          width: 100%;
+          box-sizing: border-box;
+          padding: 0 32px;
+          p.error-message {
+            font-size: 12px;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.17;
+            letter-spacing: 0.4px;
+            text-align: left;
+            color: #ce564b;
+            margin: 0;
+            padding: 0.5em 0;
+          }
+        }
+
+
+        ::ng-deep {
+          .mat-form-field {
+            width: 100%;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.19;
+            letter-spacing: 0.15px;
+            text-align: left;
+            color: rgba(255, 255, 255, 0.87);
+          }
+
+          .mat-form-field-wrapper {
+            padding-bottom: 0 !important;
+          }
+
+          .mat-input-element {
+            caret-color: #ce564b;
+          }
+          ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+            color: #ce564b !important;
+          }
         }
       }
     }
+
+    button.start {
+      width: 343px;
+      height: 56px;
+      border-radius: 4px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+      background-color: #ce564b;
+
+      font-size: 14px;
+      font-weight: 500;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.14;
+      letter-spacing: 1.25px;
+      text-align: center;
+      color: #ffffff;
+    }
+
+    p.forgot {
+      font-size: 16px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.19;
+      letter-spacing: 0.15px;
+      color: #ffffff;
+      text-align: right;
+      margin: 0;
+      margin-top: 20px;
+    }
+
   }
 
-  .loginBtn {
-    box-sizing: border-box;
-    position: relative;
-    /* width: 13em;  - apply for fixed size */
-    margin: 0.2em;
-    padding: 0 15px 0 46px;
-    border: none;
+  a {
+    font-size: 20px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.2;
+    letter-spacing: 0.19px;
     text-align: left;
-    line-height: 34px;
-    white-space: nowrap;
-    border-radius: 0.2em;
-    font-size: 16px;
-    color: #FFF;
-  }
+    color: #ffffff;
 
-  .loginBtn:before {
-    content: "";
-    box-sizing: border-box;
     position: absolute;
-    top: 5px;
-    left: 0;
-    width: 34px;
-    height: 100%;
+    bottom: 48px;
+    left: 50%;
+    transform: translateX(-50%);
   }
-
-  .loginBtn:focus {
-    outline: none;
-  }
-
-  .loginBtn:active {
-    box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
-  }
-
-  /* Facebook */
-  .loginBtn--facebook {
-    background-color: #4C69BA;
-    background-image: linear-gradient(#4C69BA, #3B55A0);
-    /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
-    text-shadow: 0 -1px 0 #354C8C;
-    width: 70%;
-    height: 45px;
-    text-align: center;
-  }
-
-
-  .loginBtn--facebook:hover,
-  .loginBtn--facebook:focus {
-    background-color: #5B7BD5;
-    background-image: linear-gradient(#5B7BD5, #4864B1);
-  }
-
-
-}
-
-
-.form-register {
-  width: 100%;
-  height: 142px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.error-message {
-  color: darkorange;
-  padding: 0.5em;
-}
-
-.start-session-btn {
-  width: 343px;
-  height: 56px;
-  background-color: #ce564b;
-  border-radius: 8px;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-}
-
-.forgot-message {
-  color: white;
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.15px;
-  width: 100%;
-  text-align: right;
-}
-
-.create-account {
-  color: white;
-  font-size: 24px;
-  letter-spacing: 0.19px;
 }
