--- a/src/app/shared/authentication/signup/signup.component.html
+++ b/src/app/shared/authentication/signup/signup.component.html
@@ -30,16 +30,17 @@
                 <input type="email" formControlName="email" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
             </label>
-            <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-                <div *ngIf="f.age.errors.required">Last Name is required</div>
+            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                <div *ngIf="f.email.errors.required">Email is required</div>
+                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
             </div>
         </div>
 
         <div class="row">
             <label>
                 <p>Password</p>
-                <input type="password" formControlName="age" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.age.errors }" #password/>
+                <input type="password" formControlName="password" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.password.errors }" #password/>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="eye" viewBox="0 0 24 24">
                     <defs>
                         <clipPath id="clip-path">
@@ -60,16 +61,17 @@
                     </g>
                 </svg>
             </label>
-            <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-                <div *ngIf="f.age.errors.required">Last Name is required</div>
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+                <div *ngIf="f.password.errors.invalid">Password Must match</div>
             </div>
         </div>
 
         <div class="row">
             <label>
                 <p>Label</p>
-                <input type="password" formControlName="age" class="form-control" #password
-                       [ngClass]="{ 'is-invalid': submitted && f.age.errors }"/>
+                <input type="password" formControlName="confirmPassword" class="form-control" #confirmPassword
+                       [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }"/>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="eye" viewBox="0 0 24 24">
                     <defs>
                         <clipPath id="clip-path">
@@ -90,17 +92,21 @@
                     </g>
                 </svg>
             </label>
-            <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-                <div *ngIf="f.age.errors.required">Last Name is required</div>
+            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                <div *ngIf="f.confirmPassword.errors.required">Password is required</div>
+                <div *ngIf="f.confirmPassword.errors.minlength">Password must be at least 6 characters</div>
             </div>
         </div>
 
 
     </form>
     <div class="controls">
-        <button class="confirm" (click)="continueToThird()">CONTINUE</button>
+        <button class="confirm" (click)="onSubmit()" >CONTINUE</button>
         <button class="cancel" (click)="returnToPreviusStage()">CANCEL</button>
     </div>
 </section>
+
+
+
 
 
