--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -107,3 +107,16 @@ section.sign-up {
 
 }
 
+
+.invalid-feedback{
+  width: 100%;
+  margin-left: 18px;
+  color: #ce564b;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.14;
+  letter-spacing: 0.24px;
+}
