--- a/src/app/shared/select-target-modal/select-target-modal.component.scss
+++ b/src/app/shared/select-target-modal/select-target-modal.component.scss
@@ -124,6 +124,9 @@ section {
         text-align: center;
         color: #ffffff;
       }
+      .btn-connect:disabled {
+        background-color: #ce564bb3;
+      }
 
       .btn-setings {
         width: 343px;
@@ -161,10 +164,13 @@ section {
       text-align: left;
       color: rgba(0, 0, 0, 0.61);
       padding-bottom: 8px;
+      padding-bottom: 8px;
+      margin-left: 24px;
     }
 
     .target-name {
-      width: 100%;
+      margin-right: 24px;
+      margin-left: 24px;
       height: 40px;
       border-radius: 4px;
       border: solid 1px #000000;
@@ -202,3 +208,50 @@ section {
     }
   }
 }
+
+.scan-container {
+  display: flex;
+align-items: center;
+  .choose-target {
+    display: flex;
+    align-items: center;
+    width: 75%;
+
+    .goal-wrapper {
+      margin-left: 27px;
+      width: 24px;
+      height: 24px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 5px;
+      background-color: #363636;
+
+      svg {
+        width: 18px;
+        height: 18px;
+      }
+    }
+
+    span {
+      margin-left: 18px;
+    }
+  }
+  button {
+    width: 128px;
+    height: 40px;
+    border-radius: 4px;
+    border: solid 1px #ce564b;
+    background-color: white;
+    font-size: 14px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.14;
+    letter-spacing: 1.25px;
+    text-align: center;
+    color: #ce564b;
+    margin-right: 24px;
+  }
+}
+
